Figuring out Experience Section

--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -2,6 +2,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 100px;
+    height: 100%;
+    margin-left: -200px;
+    padding-bottom: 12vh;
 }
 .form-container {
     margin-top: 10vh;
@@ -70,23 +74,22 @@
   
   .form-container .form-group input:focus {
     outline: none;
-    border-color: #e81cff;
+    border-color: goldenrod;
   }
   
   .form-container .form-group textarea:focus {
     outline: none;
-    border-color: #e81cff;
+    border-color: goldenrod;
   }
   
   .form-container .form-submit-btn {
     display: flex;
-    align-items: flex-start;
     justify-content: center;
-    align-self: flex-start;
+    align-self: center;
     font-family: inherit;
     color: #717171;
     font-weight: 600;
-    width: 40%;
+    width: 100%;
     background: #313131;
     border: 1px solid #414141;
     padding: 12px 16px;
@@ -98,8 +101,9 @@
   }
   
   .form-container .form-submit-btn:hover {
-    background-color: #fff;
-    border-color: #fff;
+    background-color: goldenrod;
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
+    border-color: black;
   }
   
   
