--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,10 +1,9 @@
 body {
     margin: 0;
     padding: 0;
-    height: 100vh;
     font-family: Arial, sans-serif;
     background: linear-gradient(120deg, #7d7461, #d8c3a5, #8e8d8a, #564d4a);
-    background-size: 300% 300%;
+    background-size: 300% 500vh;
     animation: gradientAnimation 10s ease infinite;
   }
 
@@ -30,10 +29,4 @@ body {
     100% {
       background-position: 0% 50%;
     }
-  }
-
-  h1 {
-    font-size: 3rem;
-    color: #333;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
   }
