--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,18 +1,42 @@
 /* Cool Navbar Styling */
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: transparent;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    padding: 1rem 2rem;
-    color: white;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    font: 1em poppins;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 1rem 2rem;
+  color: white;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  font: 1em poppins;
   }
-  
+
+.navbar::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(90deg, #2c2c2c, #3a3a3a, #2c2c2c);
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  z-index: -1;
+}
+
+.navbar.scrolled::before {
+  opacity: 1;
+}
+
+  .scrolled {
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.6);
+  }
+
+  .logo, .nav-links {
+    position: relative;
+    z-index: 1;
+}
   .logo {
     font-size: 1.8rem;
     font-weight: bold;
