--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -3,12 +3,10 @@
     justify-content: center;
     align-items: center;
     gap: 100px;
-    height: 100%;
-    margin-left: -200px;
-    padding-bottom: 12vh;
+    height: 100vh;
+    margin-top: -15vh;
 }
 .form-container {
-    margin-top: 10vh;
     width: 400px;
     background: transparent;
     border: 2px solid black;
