--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -7,16 +7,15 @@
   .body2 {
     font-family: 'Poppins', sans-serif;
     display: flex;
-    justify-content: center;
     height: 100vh;
     overflow: hidden;
   }
   
   .textWrap {
+    margin-top: 30vh;
     color: #333;
     width: 100%;
-    padding: 100px;
-    margin-top: 100px;
+    margin-left: 100px;
   }
   
   h1 {
