--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -100,13 +100,12 @@
 .skills {
   display: flex;
   flex-direction: column;
-  height: 150vh;
+  height: 160vh;
   text-align: center;
   gap: 10vh
 }
 
 .languages {
-  margin-bottom: 20px;
   margin-top: 10vh;
 }
 
@@ -140,7 +139,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  margin: 20px 0px;
+  margin: 10vh 0px;
   gap: 4vw;
 }
 
@@ -168,7 +167,7 @@
 
 .skills-image {
   width: 50%;
-  height: 50%;
+  height: auto;
 }
 
 .skills-name {
@@ -183,8 +182,21 @@
   align-items: center;
   width: 100%;
   height: 92%;
-  gap: 5vw;
+  column-gap: 4vw;
 }
+
+.ml-items {
+  margin-top: 10px;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 92%;
+  row-gap: 3vw;
+  column-gap: 5vw;
+}
+
 
 
 
