--- a/src/css/Experience.css
+++ b/src/css/Experience.css
@@ -1,8 +1,18 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway:700,900');
 .wrapper {
     margin-top: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.experience-title {
+    font-family: 'Raleway', sans-serif;
+    font-size: 4rem;
+    letter-spacing: 1px;
+    font-weight: 800;
+    color:#062930;
+    text-shadow: 0 20px 40px rgba(0,0,0,.5);
 }
 
 .card-group {
