--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -52,7 +52,6 @@
   }
   .nav-links {
     list-style: none;
-    display: flex;
     gap: 3rem;
     margin-right: 50px;
     padding: 0;
@@ -66,6 +65,15 @@
     color: white;
     transition: all 0.3s ease-in-out;
     position: relative;
+    cursor: pointer;
+  }
+  .nav-links-mobile {
+    list-style: none;
+    gap: 5px;
+    padding: 0;
+  }
+
+  .nav-links-mobile li {
     cursor: pointer;
   }
   
