--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import url('https://fonts.googleapis.com/css?family=Raleway:700,900');
 * {
     box-sizing: border-box;
     margin: 0;
