--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -7,30 +7,18 @@
   
   .home-wrapper {
     font-family: 'Raleway', sans-serif;
-    display: flex;
-    flex-direction: column;
-  }
-  .body2 {
-    display: flex;
-    height: 100vh;
-    overflow: hidden;
   }
   
   .textWrap {
-    margin-top: 30vh;
-    color: #333;
-    width: 100%;
-    margin-left: 7vw;
+    
   }
   
   .hamin {
-    font-size: 7rem; /* Large size for first line */
-    color:#062930;
     text-shadow: 0 20px 40px rgba(0,0,0,.5);
   }
   
   h2 {
-    font-size: 4rem; /* Slightly smaller size for second line */
+    font-size: 4rem;
     letter-spacing: 1px;
     font-weight: 800;
     color:#062930;
@@ -58,7 +46,6 @@
   .cursor {
     display: inline-block;
     width: 3px; 
-    height: 50px;
     background-color: black;
     margin-left: 5px;
     animation: blink 0.5s steps(1) infinite;
